<resources>
    <string name="app_name">StudentTicketExchange</string>
    <string name="AvailableTix">AVAILABLE TICKETS FOR THIS GAME</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="login">UMICH LOGIN</string>
    <string name="title">Student Ticket Exchange</string>
    <string name="schedule">SCHEDULE</string>
    <string name="football">Football</string>
    <string name="mens_basketball">Men\'s Basketball</string>
    <string name="hockey">Men\'s Hockey</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="schedulelower">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="post">Post Listing</string>
</resources>
