<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_choice_title"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_choice_mlogo" />

    <ImageView
        android:id="@+id/image_choice_mlogo"
        android:layout_width="230dp"
        android:layout_height="189dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mlogo" />

    <Button
        android:id="@+id/button_choice_buy"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#00274C"
        android:padding="5dp"
        android:text="@string/buy"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_choice_title" />

    <Button
        android:id="@+id/button_choice_sell"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="#00274C"
        android:padding="5dp"
        android:text="@string/sell"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/id_Navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choice_buy" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/id_Navbar"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_botton_menu"
        android:layout_width="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>