<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SellTicketOption">

    <Button
        android:id="@+id/button_sell_option_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sell_option_football"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="#00274C"
        android:padding="5dp"
        android:text="@string/football"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sell_option_basketball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_sell_option_basketball"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00274C"
        android:padding="5dp"
        android:text="@string/mens_basketball"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sell_option_hockey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sell_option_football"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_sell_option_hockey"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="#00274C"
        android:padding="5dp"
        android:text="@string/hockey"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/id_Navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sell_option_basketball"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/id_Navbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_botton_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>